slight modification to fix form display on mobile

--- a/Open Wi-Finder/css/style.css
+++ b/Open Wi-Finder/css/style.css
@@ -52,6 +52,53 @@
 		margin-right: auto; 
 	 }
 	
+	/* Smartphones (portrait and landscape) ----------- fixed form display for mobile*/
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 800px) {
+/* Styles */
+#popupDiv {
+		position: absolute;
+		z-index: 100;
+		width: 100%;
+		height: 80%;
+		display: none;
+		left: 0%;
+		top: 15%;
+		background-color:white;
+		border-color: black;
+		border-width: 1px;
+		padding-left: 10px;
+		
+	}
+	#popupDiv h2 {
+		font-size:90%;
+		text-align:center;
+	}
+	
+	 form {
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+		 
+	 }
+	.is-visible, label, input {
+		display: inline;
+		font-size:80%;
+	}
+	label {
+		
+	}
+	.block {
+		width: 95%;
+		display:block;
+		margin-left: auto;
+		margin-right: auto;
+		left:0;
+		
+	}
+}
+	
 	#bodyWrapper #popupDiv a {
 		width: 70px;
 		height: 30px;
